# chart

./: 200.html  404.html  README.adoc  Taskfile.yml  _payload.json  chart-gssps.ttl  chart.1.json  chart.2.json  chart.3.json  chart.4.json  chart.hierachy.json  chart.hierarchy.json  chart.json  chart.meta.json  chart.ttl  chart_2023-09.ttl  index.html  isc2020.ttl  pyproject.toml  rawld.json  xlsx.ttl
_nuxt/: 0Gifn9N5.js  0TL91BQ5.js  0Wt835l8.js  16ToIwOa.js  1N8WzAr_.js  1VE8_eNI.js  1x34LeNf.js  2N7yKhoX.js  374FXueo.js  4XeUgBRu.js  61D5jESE.js  7V95NKXY.js  7Vqv60og.js  8Wc9byKn.js  8oQ4gQjP.js  8suJsPoi.js  B-rDx3tb.js  B3bQpdja.js  B3cd-GUP.js  B4T-eV-d.js  B54Aom2q.js  B5IvtUVc.js  B5ac-E1x.js  B5ibEe9c.js  B5mj6fP5.js  B7NBuHAV.js  B7s2q9o7.js  B7wNzX1e.js  B88cWE7M.js  B8Vf1M3o.js  B8_cHMTL.js  B94lZUwR.js  BD0TQYtx.js  BEcIM9db.js  BEiognOJ.js  BFgQqt9z.js  BG7KhOZ8.js  BGKBnBZq.js  BHWxCw88.js  BI_NcTZh.js  (+335 more)
chart-generate/: .gitignore  chartgen.py  frame.json  pyproject.toml
chart-ui/: .gitignore  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
queries/: README.adoc  _gssas_bases.sparql  _gssps_bases.sparql  construct-age-lang.sparql  describe-object.sparql  get-ages.sparql  get-all-ages-lang.sparql  get-all-ages.sparql  get-all.sparql  get-eons.sparql  get-epochs.sparql  get-eras.sparql  get-labels-stratigraphic-shortform-en.ttl  get-labels-timescale-longform-en.ttl  get-periods.sparql  run-query.py  xlabels-csv.py  xlabels-en.csv  xlabels-nl.csv  xlabels-rdf.py  xlabels-test.py
source/: chart-multilang.ttl  chart-source-default.xlsx  xlsx.ttl  (+9 more)
(+129 files in other folders)
