[tool.poetry]
name = "chart-generate"
version = "0.1.0"
description = ""
authors = ["Jae Bogg <26292620+JaeTLDR@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
PyLD = "^2.0.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
